# PocketOptionAPI

./: README.md  pyproject.toml  requirements.txt  setup.py
pocketoptionapi/: __init__.py  api.py  candles.json  client.py  connection_keep_alive.py  constants.py  expiration.py  global_value.py  models.py  monitoring.py  pocket.py  stable_api.py  teste_temp.py  websocket_client.py
pocketoptionapi/backend/ws/: client.py
pocketoptionapi/backend/ws/chat/: __init__.py
pocketoptionapi/login/test/: login.py
pocketoptionapi/test/: webdrivertest.py
pocketoptionapi/ws/: __init__.py  client.py
pocketoptionapi/ws/chanels/: base.py  buyv3.py  candles.py  get_balances.py  ssid.py
pocketoptionapi/ws/channels/: base.py  buyv3.py  candles.py  candles.py.py  change_symbol.py  get_balances.py  ssid.py
pocketoptionapi/ws/objects/: base.py  candles.py  time_sync.py  timesync.py
pocketoptionapi_async/: __init__.py  client.py  config.py  connection_monitor.py  constants.py  exceptions.py  utils.py  websocket_client.py
tools_ferramentas/: get_driver.py  get_ssid.py  get_ssid_demo.py  get_ssid_real.py  test_client.py
